aligned title and responsive fixes

--- a/css/app.css
+++ b/css/app.css
@@ -150,12 +150,16 @@
 .convy_hero_inner {font-weight:normal;position: relative;
     z-index: 3;
     margin: 0 auto;
-    text-align: center;}
+    }
 
 
-.convy_hero_inner h2{color:#fff;font-weight:normal;text-align:center;font-size:4em;overflow:visible;}
+.convy_hero_inner h2{color:#fff;font-weight:normal;text-align:left;font-size:5em;overflow:visible;}
 .cta_box {z-index: 3;background-color:#00D3E1;overflow:hidden;height:350px;margin-top: -250px;}
-
+@media screen and (max-width: 39.9375em) {
+  .cta_box {
+    margin-top: 0px;
+  }
+}
 .convy_cta{
 	position: relative;
 }
@@ -402,11 +406,14 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#efde00', end
 .convy_sectors label{
   font-size: 1.5rem;
 }
-    
+ .convy_sectors img{
+  min-width:170px;
+  max-width:170px;
+}   
 
 .index_twitter_bg_setup{
     position: relative;
-    height: 400px;
+    height: auto;
     overflow: visible;
 }
 .index_twitter_bg {
