--- a/css/foundation.css
+++ b/css/foundation.css
@@ -31,7 +31,11 @@ html {
      */
 body {
   margin: 0; }
-
+  
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
 /**
      * Add the correct display in IE 9-.
      */
